fix flex wrap

--- a/src/renderer/assets/sass/_app.scss
+++ b/src/renderer/assets/sass/_app.scss
@@ -35,5 +35,5 @@ button {
   right: 0;
   bottom: 0;
   left: 28vh;
-  overflow-y: auto;
+  overflow-y: none;
 }
